--- a/languages/smalltalk.org
+++ b/languages/smalltalk.org
@@ -1,3 +1,4 @@
+- Libraries https://github.com/pharo-open-documentation/awesome-pharo
 - Playlist: Smalltalk FIUBA
   https://www.youtube.com/playlist?list=PLjAkTa6GqXRdYkY2cWXTRWTYy7A0gms13
 - Playlist: Aprendiendo Smalltalk epoca del Covid
