--- a/languages/java/java.org
+++ b/languages/java/java.org
@@ -19,3 +19,17 @@
 - Amateur 3D Render
   https://www.reddit.com/r/java/comments/okebt8/i_created_a_java_3d_rendering_engine_from_scratch/
   https://github.com/nbrugger-tgm/JRender/
+- java style guide https://google.github.io/styleguide/javaguide.html
+* Standard Library
+- JCL - Java Class/Core Libraries
+- https://docs.oracle.com/en/java/javase/19/core/java-core-libraries1.html
+- https://en.wikipedia.org/wiki/Java_Class_Library
+* Types
+| name   | type   | declaration               | access    |
+|--------+--------+---------------------------+-----------|
+| Arrays | int[]  | new int[3]                | arr[0]    |
+|        |        | {0,1,2}                   |           |
+|--------+--------+---------------------------+-----------|
+| Enums  | Gender | enum Gender {MALE,FEMALE} | enum.MALE |
+|--------+--------+---------------------------+-----------|
+|        |        |                           |           |
